# kaliveda

./: .gitignore  CMakeLists.txt  KVConfig.h.in  KVVersion.h.in  Makefile  README.md  VERSION  kaliveda-config.in
KVIndra/: CMakeLists.txt
KVIndra/INDRA.T21-03/: dataset.rootrc
KVIndra/INDRA2ROOT/: ROOT_Fortran_Interface.cpp  faire_arbre_c2.f
KVIndra/INDRA_camp1/: dataset.rootrc
KVIndra/INDRA_camp2/: dataset.rootrc
KVIndra/INDRA_camp4/: dataset.rootrc
KVIndra/INDRA_camp5/: dataset.rootrc
KVIndra/INDRA_e416a/: dataset.rootrc
KVIndra/INDRA_e475s/: dataset.rootrc
KVIndra/INDRA_e494s_woVAMOS/: dataset.rootrc
KVIndra/INDRA_e503_woVAMOS/: dataset.rootrc
KVIndra/INDRA_e613/: dataset.rootrc
KVIndra/analysis/: KVDataPatch_CorrectEtalonModuleIDCode.cpp  KVDataPatch_INDRA_SanityChecks.h  KVINDRAReconDataAnalyser.cpp
KVIndra/calibration/: CMakeLists.txt  KVLightEnergyCsI_Tabacaru_Camp2_10_17.cpp  KVLightEnergyCsI_Tabacaru_Camp2_10_17.h  LinkDef.h
KVIndra/db/: KVINDRADB.cpp  KVINDRADB1.cpp  KVINDRADB2.cpp  KVINDRADB4.cpp  KVINDRADB_e613.cpp  KVINDRAUpDater.cpp  KVINDRAUpDater.h
KVIndra/etc/: kaliveda-indra.rootrc
KVIndra/examples/: ExampleINDRAAnalysis.h
KVIndra/exp_events/: KVINDRA.cpp  KVINDRA.h  KVINDRABackwardGroupReconstructor.cpp  KVINDRAEtalonGroupReconstructor.cpp  KVINDRAEtalonGroupReconstructor.h  KVINDRAForwardGroupReconstructor.cpp  KVINDRAForwardGroupReconstructor.h  KVINDRAGroupReconstructor.cpp  KVINDRAGroupReconstructor.h  KVINDRAReconEvent.cpp  KVINDRAReconEvent.h  KVINDRAReconNuc.cpp  KVINDRAReconNuc.h  (+1 more)
fitltg-0.1/: CMakeLists.txt
(+381 files in other folders)
